--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "element-ui": "^2.4.11",
+    "js-cookie": "^2.2.0",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.2",
     "vue-editor": "0.0.0",
     "vue-router": "^3.0.1",
-    "vue2-editor": "^2.6.6"
+    "vue2-editor": "^2.6.6",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
